Add MySQL/JPA persistence, Google Places API for address autocomplete, UI improvements